[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/Plant/Idle (44x42).png" type="Texture" id=1]
[ext_resource path="res://scripts/Plantie.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Plant/Attack (44x42).png" type="Texture" id=3]
[ext_resource path="res://Enemies/Plant/Hit (44x42).png" type="Texture" id=4]
[ext_resource path="res://sound_fx/pepSound2.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.48236, 9.97324 )

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 96.2309

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13.1596, 6.0703 )

[node name="Plantie" type="KinematicBody2D"]
position = Vector2( -4.40973, -19.5288 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="texture" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 8

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 5.70157, 8.61467 )
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/attack = SubResource( 2 )
anims/hit = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="spawnShoot" type="Position2D" parent="."]
position = Vector2( -14.2544, -4.23177 )

[node name="playerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="collision" type="CollisionShape2D" parent="playerDetector"]
shape = SubResource( 5 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 64

[node name="collision" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 4.96667, -10.1609 )
shape = SubResource( 6 )

[node name="hit_fx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
pitch_scale = 0.8

[connection signal="body_entered" from="playerDetector" to="." method="_on_playerDetector_body_entered"]
[connection signal="body_exited" from="playerDetector" to="." method="_on_playerDetector_body_exited"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
